# lambda-lib

./: Cargo.toml  Makefile  README.md
.github/: auto_assign.yml
.github/workflows/: rust.yml  tests.yml
src/: gzip.rs  lambda.rs  lib.rs  log.rs  queue.rs  status.rs
src/aws/: lambda.rs  mod.rs  queue.rs  s3.rs
src/request/: mod.rs  transaction.rs
