[package]
name = "lambda-lib"
version = "0.1.0"
authors = ["Dgame <rswhite4@googlemail.com>"]
edition = "2018"

[dependencies]
rusoto_core = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_sqs = { version = "0.42.0", default_features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.42.0", default_features = false, features = ["rustls"] }
lambda_runtime = { package = "lambda", git = "https://github.com/awslabs/aws-lambda-rust-runtime", optional = true }
lazy_static = { version = "1.4.0", optional = true }
aws_lambda_events = "0.3.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
flate2 = { version = "1.0.16", features = ["zlib"], default-features = false }
log = "0.4.11"
env_logger = "0.7.1"
chrono = "0.4.13"
sentry = { version = "0.18.1", optional = true, features = ["with_log", "with_panic"] }
chrono-tz = "0.5.2"

[features]
sqs = []
s3 = []
gzip = []
sentry_log = ["sentry"]
transaction_id = ["lazy_static"]
