[package]
name = "lambda-lib"
version = "0.1.0"
authors = ["C. Jeremiah Schneider <j.schneider@demv.de>"]
edition = "2018"

[dependencies]
async-trait = "0.1.51"
aws_lambda_events = "0.4.0"
chrono = "0.4.19"
chrono-tz = "0.5.3"
env_logger = "0.8.2"
flate2 = { version = "1.0.19", features = ["zlib"], default-features = false }
lambda_runtime = { package = "lambda_runtime", git = "https://github.com/awslabs/aws-lambda-rust-runtime", optional = true }
lazy_static = { version = "1.4.0", optional = true }
log = "0.4.11"
rusoto_core = { version = "0.47.0", default_features = false, features = ["rustls"]}
rusoto_s3 = { version = "0.47.0", default_features = false, features = ["rustls"]}
rusoto_sqs = { version = "0.47.0", default_features = false, features = ["rustls"]}
sentry = { version = "0.18.1", optional = true, features = ["with_log", "with_panic"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.60"

[features]
sqs = []
s3 = []
gzip = []
sentry_log = ["sentry"]
transaction_id = ["lazy_static"]
